src/test/deca/codegen/valid/oracle/AvecObjet/test1.ass
; test de la taille de la pile
	TSTO #6	; Taille maximale de la pile
	ADDSP #5
	BOV stack_overflow_error
; start main program
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de Point
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
; Main program
; Beginning of main declarations:
; new ligne 8
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.Point
	POP R2
	STORE R2, 5(GB)
; Beginning of main instructions:
	WSTR "Objet Point cree"
	WNL
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	BEQ equal
not_equal:
	LOAD #0, R0
	RTS
equal:
	LOAD #1, R0
	RTS
; Initialisation des champs de la classe Point
init.Point:
	TSTO #1
	PUSH R2
; Entree dans la boucle des fields
	LOAD -2(LB), R2
	LOAD #0, R1
	STORE R1, 1(R2)
	POP R2
	RTS
stack_overflow_error:
	WSTR "Error : Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error : Input / Output Error "
	WNL
	ERROR
tas_plein:
	WSTR "Error : Heap OverFlow"
	WNL
	ERROR
; end main program
